Modal overflow fixedW

--- a/bamboo-bites/styling/components/modal.scss
+++ b/bamboo-bites/styling/components/modal.scss
@@ -13,16 +13,21 @@
   justify-content: center;
   align-items: center;
   backdrop-filter: blur(5px);
+  overflow-y: scroll;
 
   @media screen and (max-width: $breakpoint-tablet) {
     padding: 0rem;
     width: 100%;
+    background-color: rgb(16, 16, 16);
   }
 
+  @media screen and (max-width: $breakpoint-mobile) {
+  }
   .modal-content {
     background-color: rgb(16, 16, 16);
     max-width: 85%;
     width: 100%;
+    height: 100%;
     position: relative;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -35,6 +40,7 @@
       height: 100%;
       grid-template-columns: 1fr;
       grid-template-rows: 0.5fr 1fr;
+      height: 100%;
     }
 
     @media screen and (max-width: $breakpoint-tablet) {
